testdata/errors/multi-2/syntax.go
package syntaxmulti2

func Foo2(type) {
}
